# sketch

./: .gitignore  README.md  configure.ac
doc/: general_geom_constraint.lyx  sketcher.lyx  two_lines.lyx
src/: .gitignore  Makefile.am  configure.ac  constraint.c  constraint.h  draw.h  draw_gtk_cairo.c  draw_gtk_x11.c  gui.c  gui.h  main.c  main.h  modviz.xml  param_dialog.c  param_dialog.h  sketch_constraint.h  sketch_types.c  sketch_types.h  solver.c  solver.h  utils.h  visualize.sh
